--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.0.1",
     "@tanstack/react-query": "^5.18.1",
+    "ethers": "^6.11.1",
+    "ethersv5": "npm:ethers@^5.7.2",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.3.11",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
