--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.0.1",
-    "@tanstack/react-query": "^5.18.1",
+    "@rainbow-me/rainbowkit": "^1.3.6",
     "ethers": "^6.11.1",
+    "viem": "~1.21.4",
+    "wagmi": "~1.4.13",
     "ethersv5": "npm:ethers@^5.7.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.3.11",
@@ -19,9 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "viem": "^2.7.3",
-    "wagmi": "^2.5.5"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
