--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gelatonetwork/relay-sdk": "^5.5.6",
     "@rainbow-me/rainbowkit": "^1.3.6",
     "ethers": "^6.11.1",
-    "viem": "~1.21.4",
-    "wagmi": "~1.4.13",
     "ethersv5": "npm:ethers@^5.7.2",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.3.11",
@@ -20,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "viem": "~1.21.4",
+    "wagmi": "~1.4.13"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
