--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@abstract-foundation/agw-client": "^1.3.0",
+    "@abstract-foundation/agw-react": "^1.4.2",
     "@gelatonetwork/relay-sdk": "^5.5.6",
-    "@rainbow-me/rainbowkit": "^1.3.6",
+    "@privy-io/react-auth": "^2.0.9",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@rainbow-me/rainbowkit": "^2.1.3",
+    "@tanstack/react-query": "^5.65.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.11.1",
     "ethersv5": "npm:ethers@^5.7.2",
     "keccak256": "^1.0.6",
+    "lucide-react": "^0.474.0",
     "merkletreejs": "^0.3.11",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "viem": "~1.21.4",
-    "wagmi": "~1.4.13"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.22.15",
+    "wagmi": "^2.14.9"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
